asterisk conf file + call file + call feature

--- a/asterisk-conf/sip.conf
+++ b/asterisk-conf/sip.conf
@@ -10,7 +10,7 @@ type=peer
 host=sip3.ovh.fr
 context=ovh-sip
 language=en
-username=number
+defaultuser=number
 secret=password
 canreinvite=no
 dtmfmode=auto
