move py files to source/ (cleaner directory) update supervisor conf file

--- a/asterisk-conf/extensions.conf
+++ b/asterisk-conf/extensions.conf
@@ -1,6 +1,5 @@
 [ogame_attack_warning]
 exten => _X.,1,Dial(SIP/${EXTEN}@provider)
-exten => _X.,2,Set(ogame_message=${FILE("/tmp/ogame_attack")})
+exten => _X.,2,Set(ogame_message=${FILE("/tmp/message")}) ;change the path here if you change it in the config.py
 exten => _X.,3,Flite("${ogame_message}")
-;exten => _X.,2,Flite("Hello Alex. You are being attacked on O game. Log in as soon as possible to save your empire!")
 exten => _X.,n,Hangup()
