--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,9 @@
 [supervisord]
-nodaemon = true
+nodaemon = false
 
 [program:ogame-caller]
-command = /usr/bin/python3.5 main.py
+command = bash -c "source env/bin/activate && python main.py"
+directory=/home/project/ogame-caller/source/
 stderr_logfile = /var/log/ogame-caller.stderr.log
 stderr_logfile_maxbytes = 10MB
 stdout_logfile = /var/log/ogame-caller.stdout.log
