wrong path for sourcing env

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,8 +2,8 @@
 nodaemon = false
 
 [program:ogame-caller]
-command = bash -c "source env/bin/activate && python main.py"
-directory=/home/project/ogame-caller/source/
+command = bash -c "source env/bin/activate && python source/main.py"
+directory=/home/project/ogame-caller/
 stderr_logfile = /var/log/ogame-caller.stderr.log
 stderr_logfile_maxbytes = 10MB
 stdout_logfile = /var/log/ogame-caller.stdout.log
